--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="imag/logo.png"></h1>
+				<h1><img src="logo.png"></h1>
 
 				<nav>
 					<ul>
@@ -26,31 +26,28 @@
 			<ul class="produtos">
 				<li>
 					<h2>Cabelo</h2>
-						<img src="imag/cabelo.jpg">
-							<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
-							<p class="produto-preco">R$ 25,00</p>
+					<img src="cabelo.jpg">
+					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
+					<p class="produto-preco">R$ 25,00</p>
 				</li>
 				<li>
 					<h2>Barba</h2>
-						<img src="imag/barba.jpg">
-							<p class="produto-descricao">Corte e desenho profissional de barba</p>
-							<p class="produto-preco">R$ 18,00</p>
+					<img src="barba.jpg">
+					<p class="produto-descricao">Corte e desenho profissional de barba</p>
+					<p class="produto-preco">R$ 18,00</p>
 				</li>
 				<li>
 					<h2>Cabelo + Barba</h2>
-						<img src="imag/cabelo+barba.jpg">
-							<p class="produto-descricao">Pacote completo de cabelo e barba</p>
-							<p class="produto-preco">R$ 35,00</p>
+					<img src="cabelo+barba.jpg">
+					<p class="produto-descricao">Pacote completo de cabelo e barba</p>
+					<p class="produto-preco">R$ 35,00</p>
 				</li>
 			</ul>
 		</main>
-		
-		<footer>
-			<img src="imag/logo-branco.png" alt="">
-				<p class="copyright">&copy;Copyright Barbbearia Alura - 2019</p>
-				<p class=" natal">Tenha um Feliz Natal, e ótimo Ano Novo</p>
-	</footer>
-	</body>
 
-	
+		<footer>
+			<img src="logo-branco.png">
+			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+		</footer>
+	</body>
 </html>
